package com.samic.samic.data.entity;

import lombok.Builder;


//@NoArgsConstructor
//@AllArgsConstructor
@Builder
public record Customer(Integer connectionNo){
}
